add station search ups
