# src/webserver/paths/station_search/register.ts
@@ -1,0 +1,13 @@
+import register from '../../helpers/register.js';
+import v1 from './v1.js';
+
+// deprecated
+register('GET', '/stationSearch/:q', {
+    params: { q: { type: 'string', required: true } },
+    query: { length: { type: 'number', default: '5' } }
+}, v1)
+
+register('GET', '/v1/station_searcg/:q', {
+    params: { q: { type: 'string', required: true } },
+    query: { length: { type: 'number', default: '5' } }
+}, v1)
